# TestGit

./: .gitignore  CMakeList.txt  CMakeLists.txt  build_env.sh  main.cpp  source_setup.sh
Pkg/Auth/Login/inc/: authService.h
Pkg/Auth/Login/src/: authService.cpp
Pkg/Auth/Session/inc/: SessionService.h
Pkg/Auth/Session/src/: SessionService.cpp
Pkg/Booting/inc/: BootingApp.h
Pkg/Booting/src/: BootingApp.cpp
Pkg/Common/: constant.h
Pkg/ComputingServ/FaceCheck/inc/: FaceCheckService.h  TArcface.h  TBlur.h  TLive.h  TMtCNN.h  TRetina.h  TWarp.h  config.h
Pkg/ComputingServ/FaceCheck/models/live/: CamThreadMgr.cpp  CamThreadMgr.h  ConCamIpml.cpp  FaceCheckService.cpp  FaceMeshService.cpp  FaceMeshService.h  IConsumer.h  IProducer.h  ProCamIpml.cpp  ProCamIpml.h  SafeQueue.h  TArcface.cpp  TBlur.cpp  TLive.cpp  TMtCNN.cpp  TRetina.cpp  TWarp.cpp
Pkg/ComputingServ/FaceCheck/src/: FaceCheckService.cpp  TArcface.cpp  TLive.cpp  TMtCNN.cpp  TRetina.cpp
Pkg/ComputingServ/FaceMesh/src/: FaceMeshService.cpp
Pkg/Devices/Camera/inc/: CamThreadMgr.h  ConCamIpml.h  ProCamIpml.h
Pkg/Devices/Camera/src/: CamThreadMgr.cpp  ProCamIpml.cpp
Pkg/Middlewares/DBMgr/inc/: DBMgr.h  SessionMgr.h
Pkg/Middlewares/DBMgr/src/: DBMgr.cpp  SesionMgr.cpp
Pkg/Middlewares/ImgProvider/inc/: ConFaceCheck.h  ImageProvider.h  ImageStreamObserver.h
Pkg/Middlewares/ImgProvider/src/: ConFaceCheck.cpp  ImageProvider.cpp  ImageStreamObserver.cpp
env/: install_cmake_3_20.sh  install_ncnn.sh  install_opencv.sh  install_qt5.sh  install_socketio.sh
libs/cv2_bin/include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
libs/cv2_bin/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
libs/cv2_bin/lib/pkgconfig/: opencv4.pc
libs/ncnn_bin/include/ncnn/: platform.h
libs/ncnn_bin/lib/pkgconfig/: ncnn.pc
